Aumenta o contraste dos links de paginação - resolve #332

--- a/src/main/assets/stylesheets/_acessibilidade.scss
+++ b/src/main/assets/stylesheets/_acessibilidade.scss
@@ -52,6 +52,12 @@ body.contraste {
     color: $preto !important;
   }
 
+  .paginacao-letras {
+    a, .paginacao-busca {
+      color: $preto !important;
+    }
+  }
+
   #acessibilidade span {
     color: $preto !important;
   }
